third_party/blink/web_tests/external/wpt/screen-orientation/idlharness.window-expected.txt
This is a testharness.js-based test.
FAIL idl_test setup promise_test: Unhandled rejection with value: object "WebIDLParseError: Syntax error at line 1471, since `interface CustomElementRegistry`:
 define(DOMString name, CustomElementConstructor constructor, optional ElementDefinitionOptions
                        ^ Trailing comma in arguments list"
PASS Partial interface Screen: original interface defined
PASS ScreenOrientation interface: existence and properties of interface object
PASS ScreenOrientation interface object length
PASS ScreenOrientation interface object name
PASS ScreenOrientation interface: existence and properties of interface prototype object
PASS ScreenOrientation interface: existence and properties of interface prototype object's "constructor" property
PASS ScreenOrientation interface: existence and properties of interface prototype object's @@unscopables property
PASS ScreenOrientation interface: operation lock(OrientationLockType)
PASS ScreenOrientation interface: operation unlock()
PASS ScreenOrientation interface: attribute type
PASS ScreenOrientation interface: attribute angle
PASS ScreenOrientation interface: attribute onchange
PASS Screen interface: attribute orientation
Harness: the test ran to completion.

